{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 186,
  "lineage": "87aaa187-4687-35d2-5eea-a08efda91169",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2692b6acea72ee6",
            "arn": "arn:aws:ec2:ap-south-1:667542788543:instance/i-00e420aa0d09537dd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-00e420aa0d09537dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0186ff3e574d745e1",
            "private_dns": "ip-10-0-1-176.ap-south-1.compute.internal",
            "private_ip": "10.0.1.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0969c20a416550f51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05c62408d34294978",
            "tags": {
              "Name": "Nat-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00c839c2b0bfc57f1"
            ]
          },
          "depends_on": [
            "aws_security_group.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0595a31e12e48e26c",
            "owner_id": "667542788543",
            "tags": {
              "Name": "Public_ing"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee74474118b996a9",
            "owner_id": "667542788543",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-00e420aa0d09537dd",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0186ff3e574d745e1",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_instance.nat",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d5e8b26e32a2d23f",
            "owner_id": "667542788543",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0595a31e12e48e26c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0886a3cf138bc371f",
            "route_table_id": "rtb-0d5e8b26e32a2d23f",
            "subnet_id": "subnet-05c62408d34294978"
          },
          "depends_on": [
            "aws_route_table.r"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eee367e77366c2d2",
            "route_table_id": "rtb-0d5e8b26e32a2d23f",
            "subnet_id": "subnet-03b36abfd49ee9199"
          },
          "depends_on": [
            "aws_route_table.r"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00829013419dcc407",
            "route_table_id": "rtb-0d5e8b26e32a2d23f",
            "subnet_id": "subnet-090e1d175ab273dab"
          },
          "depends_on": [
            "aws_route_table.r"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pa",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edfb30cacc942152",
            "route_table_id": "rtb-0ee74474118b996a9",
            "subnet_id": "subnet-06e4ba8ae66c6b085"
          },
          "depends_on": [
            "aws_route_table.prt"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8233a0633f01308",
            "route_table_id": "rtb-0ee74474118b996a9",
            "subnet_id": "subnet-07ae53bc57c9a4fb2"
          },
          "depends_on": [
            "aws_route_table.prt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:security-group/sg-00c839c2b0bfc57f1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c839c2b0bfc57f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat_sg",
            "name_prefix": null,
            "owner_id": "667542788543",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:subnet/subnet-05c62408d34294978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05c62408d34294978",
            "map_public_ip_on_launch": true,
            "owner_id": "667542788543",
            "tags": {
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:subnet/subnet-03b36abfd49ee9199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-03b36abfd49ee9199",
            "map_public_ip_on_launch": true,
            "owner_id": "667542788543",
            "tags": {
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:subnet/subnet-090e1d175ab273dab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-090e1d175ab273dab",
            "map_public_ip_on_launch": true,
            "owner_id": "667542788543",
            "tags": {
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:subnet/subnet-06e4ba8ae66c6b085",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-06e4ba8ae66c6b085",
            "map_public_ip_on_launch": false,
            "owner_id": "667542788543",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:subnet/subnet-07ae53bc57c9a4fb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-07ae53bc57c9a4fb2",
            "map_public_ip_on_launch": false,
            "owner_id": "667542788543",
            "tags": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0597196f2e4752668"
          },
          "depends_on": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:667542788543:vpc/vpc-0597196f2e4752668",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07705f4663be28b59",
            "default_route_table_id": "rtb-073e01336c7c931e4",
            "default_security_group_id": "sg-04362083ee039bb47",
            "dhcp_options_id": "dopt-2a0a0b42",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0597196f2e4752668",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073e01336c7c931e4",
            "owner_id": "667542788543",
            "tags": {
              "Batch": "7am",
              "Name": "MyVPC"
            }
          }
        }
      ]
    }
  ]
}